adding form-based workflow feature and completing it.

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -18,7 +18,8 @@
 <%= article.body %>
 </td>
 <td>
-  <%= link_to "View", article_path(article), class: 'article_title', id: "article_#{article.id}" %> 
+  <%= link_to "View", article_path(article), class: 'article_title', id: "article_#{article.id}" %> |  <%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Really delete the article?"} %> | 
+  <%= link_to "Edit", edit_article_path(article) %>
 </td>
 </tr>
 
@@ -28,6 +29,9 @@
   <tr>
     <td>
       <%= link_to "Create a New Article", new_article_path, class: 'new_article' %>
+    </td>
+  </tr>
+</table>
 
 
 
