--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,3 +8,6 @@
 <%= @article.body %>
 <p> Created at: <%= @article.created_at.year %>-<%= @article.created_at.month %>-<%= @article.created_at.day %> | Updated last at: <%= @article.updated_at.year %>-<%= @article.updated_at.month %>-<%= @article.updated_at.day %>
 </p>
+<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %> | 
+<%= link_to "View All", articles_path %> | 
+<%= link_to "Edit", edit_article_path(@article) %>
